# Trinity-Launcher

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  build.sh  trinchete.pro  trinito.pro
resources/: resources.qrc
src/: main.cpp  trinito_main.cpp
src/core/: CMakeLists.txt  game_launcher.cpp  game_launcher.h  pack_installer.cpp  pack_installer.h  version_manager.cpp  version_manager.h
src/ui/: CMakeLists.txt
src/ui/dialogs/: extract_dialog.cpp  extract_dialog.h
src/ui/widgets/: version_selector.cpp  version_selector.h
src/ui/windows/: launcher_window.cpp  launcher_window.h  trinito_window.cpp  trinito_window.h
